05/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-nginx
  labels:
    app: multitool-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multitool-nginx
  template:
    metadata:
      labels:
        app: multitool-nginx
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-config
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
        - name: multitool
          image: praqma/network-multitool
          ports:
            - containerPort: 80
