05/service.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool-nginx-service
spec:
  selector:
    app: multitool-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
